--- a/public/styles/utils.css
+++ b/public/styles/utils.css
@@ -9,7 +9,7 @@
   --clr-warning: #ffe852;
   --clr-error: #800020;
   --clr-button: #b76e79;
-  --clr-shadow: rgba(0, 0, 0, 0.4);
+  --clr-shadow: rgba(0, 0, 0, 0.25);
   --font-family-primary: "Playfair", "Sans-serif";
   --font-family-secondary: "Cinzel", "Sans-serif";
 
@@ -51,6 +51,7 @@
   --shadow-l: 4px 4px 4px var(--clr-shadow);
   --shadow-xl: 5px 5px 5px var(--clr-shadow);
   --shadow-bottom: 0 4px 8px var(--clr-shadow);
+  --shadow-top: 0 -4px 8px var(--clr-shadow);
 
   --opacity-low: 0.25;
   --opacity-mid: 0.5;
@@ -59,6 +60,20 @@
 
   --wrapper-width-l: 768px;
   --wrapper-width-xl: 1200px;
+}
+
+[data-theme="light"] {
+  --clr-bg-1: #fffdf5;
+  --clr-bg-2: #f4ecd8;
+  --clr-secondary: #c28840;
+  --clr-tertiary: #a36e5c;
+  --clr-text-1: #5c3b09;
+  --clr-text-2: rgba(0, 0, 0, 0.85);
+  --clr-ok: #3d9140;
+  --clr-warning: #e4b400;
+  --clr-error: #992222;
+  --clr-button: #c28840;
+  --clr-shadow: rgba(0, 0, 0, 0.15);
 }
 
 .wrapper {
