--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -3,15 +3,11 @@
 <div class="messages__wrapper-child">
   <% if (locals.user) { %>
   <a class="messages__new-message btn-outlined" href="/new-message">
-    <img src="/icons/plus.svg" alt="">
+    <img class="new-message-icon" src="/icons/plus.svg" alt="">
   </a>
-  <% } else { %>
-    <a class="messages__new-message btn-outlined" style="visibility: hidden;" href="/new-message">
-      <img src="/icons/plus.svg" alt="">
-    </a>
   <% } %>
   <button class="messages__toggle-messages-nav">
-    <img src="/icons/triangle.svg" alt="">
+    <img class="messages__nav-icon" src="/icons/triangle.svg" alt="">
   </button>
 </div>
 </div>
@@ -80,6 +76,7 @@
 <script src="/scripts/postCard.js"></script>
 <script>
   const navToggler = document.querySelector(".messages__toggle-messages-nav");
+  let navIconClicked = false;
   const messagesNav = document.querySelector(".messages__nav");
   navToggler.style.rotate = "0deg";
 
@@ -87,6 +84,10 @@ function toggleMessagesNav() {
   messagesNav.classList.toggle("messages__nav-open");
   navToggler.style.rotate = navToggler.style.rotate === "0deg" ? "180deg" : "0deg";
   navToggler.classList.toggle('sticky');
+  if (!navIconClicked) {
+    navToggler.classList.add("icon-clicked")
+  }
+  navIconClicked = true;
 }
 
 navToggler.addEventListener("click", toggleMessagesNav);
