--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="wrapper" style="height: 100%;">
     <div class="header__content">
-      <a href="/">
+      <a href="/messages">
         <h1 class="header__app-name">House of Messages</h1>
       </a>
       <button class="header__menu-button">
